# commonlibsse-ng-submodule-template

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  update_submodules.yml
cmake/: CLIBNGPlugin.cmake
include/: PCH.h
src/: main.cpp
